--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "src/assets-bosh"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
             ],
             "scripts": [
               "src/assets-bosh/js/jquery.js",
@@ -45,7 +47,8 @@
               "src/assets-bosh/js/jquery_ui.js",
               "src/assets-bosh/js/product_filter.js",
               "src/assets-bosh/js/progresscircle.js",
-              "src/assets-bosh/js/home.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/owl.carousel/dist/owl.carousel.min.js",
               "src/assets-bosh/js/script.js"
             ]
           },
@@ -111,9 +114,31 @@
               "src/assets-bosh"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets-bosh/js/jquery.js",
+              "src/assets-bosh/js/popper.min.js",
+              "src/assets-bosh/js/bootstrap.min.js",
+              "src/assets-bosh/js/plugins.js",
+              "src/assets-bosh/js/owl.js",
+              "src/assets-bosh/js/wow.js",
+              "src/assets-bosh/js/validation.js",
+              "src/assets-bosh/js/jquery.fancybox.js",
+              "src/assets-bosh/js/appear.js",
+              "src/assets-bosh/js/nav_tool.js",
+              "src/assets-bosh/js/scrollbar.js",
+              "src/assets-bosh/js/jquery.nice_select.min.js",
+              "src/assets-bosh/js/jquery.bootstrap_touchspin.js",
+              "src/assets-bosh/js/jquery_ui.js",
+              "src/assets-bosh/js/product_filter.js",
+              "src/assets-bosh/js/progresscircle.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/owl.carousel/dist/owl.carousel.min.js",
+              "src/assets-bosh/js/script.js"
+            ]
           }
         }
       }
