--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "^17.3.0",
     "@types/owl.carousel": "^2.3.6",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "jquery": "^3.7.1",
+    "luxon": "^3.6.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
@@ -35,6 +37,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
+    "@types/luxon": "^3.6.0",
     "@types/node": "^22.13.11",
     "@types/swiper": "^5.4.3",
     "jasmine-core": "~5.1.0",
