--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "luxon": "^3.6.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "owl.carousel": "^2.3.4",
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
+    "@types/jwt-decode": "^3.1.0",
     "@types/luxon": "^3.6.0",
     "@types/node": "^22.13.11",
     "@types/swiper": "^5.4.3",
