--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/owl.carousel": "^2.3.6",
+    "angular-calendar": "^0.31.1",
+    "angularx-flatpickr": "^8.1.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "jquery": "^3.7.1",
