--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.6.1",
+    "ngx-autosize": "^2.0.4",
     "ngx-swiper-wrapper": "^10.0.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
